<resources>
    <string name="app_name">BukingHostel</string>
    <string name="lorem">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit</string>
    <string name="loremlong">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_spaces_that_bring_joy">Create spaces that bring joy</string>
    <string name="hi_welcome_back">Hi, Welcome Back</string>
    <string name="don_t_log_in"><font fgcolor="#ff363130">Already have an account?</font></string>
    <string name="don_t_sign_up"><font fgcolor="#ff363130">Don\'t have an account?</font></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update_profile">Update Profile</string>
    <string name="password">Password</string>
    <string name="change_the_password">Change the password</string>
    <string name="set_password">Set Password</string>
    <string name="hint_pas">●●●●●●●●</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="my_cart">My Cart</string>
    <string name="hint_name">Madison Smith</string>
    <string name="hint_email">example@example.com</string>
    <string name="hint_id">ID: 25040024</string>
    <string name="login">login</string>
    <string name="hint_date">DD / MM / YYYY</string>
    <string name="forgot_pas">Forgot Password</string>
    <string name="reset_pas">Reset Password?</string>
    <string name="next">Next</string>
    <string name="star">4.5</string>
    <string name="categories">Categories</string>
    <string name="best_seller">Best Seller</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="there_are_no_items_in_your_cart">There Are No Items\nIn Your Cart</string>
    <string name="kitchen_cart">Kitchen Cart</string>
    <string name="shop_now">Shop Now</string>
    <string name="new_collection">New Collection</string>
    <string name="aluminum_chair">Aluminum Chair</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_details_to_proceed">Please enter your details to proceed</string>
    <string name="username_or_email">Username Or Email</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="notification">Notification</string>
    <string name="general_notification">General Notification</string>
    <string name="sound_call">Sound Call</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="special_offers">Special Offers</string>
    <string name="payments">Payments</string>
    <string name="promo_and_discount">Promo And Discount</string>
    <string name="cashback">Cashback</string>
    <string name="skip">Skip</string>
    <string name="confortable_space">Confortable Space</string>
    <string name="modern_design">Modern Design</string>
    <string name="styled_living">Styled Living</string>
    <string name="relaxing_furniture">Relaxing Furniture</string>
    <string name="get_started">Get Started</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="lorem_start">Lorem ipsum dolor sit amet, consectetur\nadipiscing elit, sed do eiusmod.</string>
    <string name="wishlist">Wishlist</string>
    <string name="your_wishlist_is_empty">Your Wishlist Is Empty.</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>