<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/welcome"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:text="@string/please_enter_your_details_to_proceed"/>
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_or_email"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textColorHint="@color/text_hist"
        android:background="@drawable/res1"
        android:inputType="textEmailAddress|text"/>
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/text_hist"
        app:endIconMode="password_toggle"
        android:hint="@string/hint_pas"
        app:endIconTint="@color/text_hist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/res1"
            android:inputType="textPassword"
            android:letterSpacing="0.2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple_btn"
        android:onClick="LogIn"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/forgot_pas"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:clickable="true"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="14sp"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/don_t_have_signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_sign_up"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/text"
            android:backgroundTint="@android:color/transparent"
            android:padding="3dp"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>