<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="40dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/ResBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:background="@color/white"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_password"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/change_the_password"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:text="@string/loremlong"/>
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"
        android:textSize="15sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/text"
        app:endIconMode="password_toggle"
        android:hint="@string/hint_pas"
        app:endIconTint="@color/text_hist">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pasRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:letterSpacing="0.2"
            android:background="@drawable/res1"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/text"
        app:endIconMode="password_toggle"
        android:hint="@string/hint_pas"
        app:endIconTint="@color/text_hist">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confPasRes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:letterSpacing="0.2"
            android:background="@drawable/res1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ResBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_btn"
        android:text="@string/reset_password"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"/>

</LinearLayout>