<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="40dp">

        <ImageButton
            android:id="@+id/forgotBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow"
            android:background="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot_pas"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginStart="10dp"/>

    </LinearLayout>
    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pas"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textSize="12sp"
        android:layout_marginBottom="30dp"
        android:text="@string/loremlong" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/res2">
        <TextView
            android:layout_marginTop="50dp"
            android:text="@string/enter_your_email_address"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"/>
        <EditText
            android:id="@+id/foremail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/res1"
            android:textColorHint="@color/text_hist"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:layout_marginHorizontal="40dp"/>
        <Button
            android:id="@+id/NextBTN"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_btn"
            android:text="@string/next"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>